# cybird

./: .justfile  Cargo.toml  LICENSE  README.md
clicker-plugin/: Cargo.toml
clicker-plugin/src/: lib.rs  plugin.rs
crazier-crab/: build.rs
crazier-crab/src/: lib.rs
crypto-crab/: Cargo.toml
crypto-crab/src/: main.rs
cybird/: Cargo.toml
cybird-macro/: Cargo.toml
cybird-macro/src/: lib.rs
cybird/src/: lib.rs
examples/: Cargo.toml  tasks.nu
examples/clicker-plugin/: Cargo.toml
examples/clicker-plugin/src/: lib.rs
examples/crazier-crab/: Cargo.toml
examples/crypto-crab/: Cargo.toml
examples/rogue-game/: Cargo.toml
examples/rogue-game/src/: main.rs  math.rs  move_to.rs  pathfinding.rs  vector.rs
examples/rogue-lib/: Cargo.toml
examples/rogue-lib/src/: entity.rs  lib.rs
runner/: .gitmodules  Cargo.toml  README.md
runner/runner/: .gitignore  Cargo.toml
runner/src/: main.rs
upgrade3/: Cargo.toml  build.rs
upgrade3/src/: lib.rs
