[package]
name = "crazier-crab"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[lib]
# Use both rlib and cdylib - rlib for Rust consumption, cdylib for C FFI
crate-type = ["rlib", "cdylib"]

[features]
default = ["dynamic"]
dynamic = []

[dependencies]
clicker-plugin = { path = "../clicker-plugin" }
cybird = { workspace = true }
